PROMENA ZA PROBU

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>prva vezba frontend-a</head>
 
 
-<h1>zdravo svete</h1>
+<h1>zdravo svete, EVO MENE</h1>
 <p>lorem ipsur dolor sit
 is simply dummy text of the printing and typesetting industry.
 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
@@ -13,7 +13,6 @@ like Aldus PageMaker including versions of Lorem Ipsum.</p>
 
 
 <p>Damjan Pavlica</p>
-<img 
+<img
 src="SLIKA 1.1.jpg"
 alt="leteci baloncici">
-
